# mirror-intel

./: .autocorrectrc  .editorconfig  .envrc  .gitignore  Cargo.toml  README.md  Rocket.toml  deny.toml  flake.nix  rust-toolchain.toml
.github/: zizmor.yml
.github/workflows/: build.yml  release.yml  test.yml  update-flake-lock.yml
nix/: crane.nix
src/: artifacts.rs  browse.rs  common.rs  error.rs  intel_path.rs  intel_query.rs  main.rs  pypi_index.rs  queue.rs  repos.rs  storage.rs  utils.rs
tests/config/: Rocket.toml  mirror-intel.toml
tests/e2e/: default.nix
tests/pytorch_wheels/: whl.html  whl_cu130.html  whl_cu130_torch.html  whl_torch.html
