[package]
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2018"
name = "mirror-intel"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2"
actix-web = { version = "4.1", features = ["macros"] }
bytes = "1.0"
figment = { version = "0.10", features = ["toml"] }
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
paste = "1"
percent-encoding = "2.1"
pin-project = "1.0"
prometheus = "0.13"
regex = "1"
reqwest = { version = "0.11", features = ["stream"] }
rstest = "0.18"
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
serde = "1.0"
tap = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[dev-dependencies]
tempdir = "0.3"
httpmock = "0.6"
figment = { version = "0.10", features = ["test"] }