[package]
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2024"
name = "mirror-intel"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.2"
actix-web = { version = "4.1", features = ["macros"] }
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.123"
bytes = "1.11"
figment = { version = "0.10", features = ["toml"] }
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
percent-encoding = "2.1"
prometheus = "0.14"
regex = "1"
reqwest = { version = "0.11", features = ["stream"] }
rstest = "0.26"
serde = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[dev-dependencies]
tempfile = "3"
httpmock = "0.8"
figment = { version = "0.10", features = ["test"] }
