[package]
authors = ["Alex Chi <iskyzh@gmail.com>"]
edition = "2024"
name = "mirror-intel"
license = "Apache-2.0"
version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "3.12"
actix-web = { version = "4.13", features = ["macros"] }
# NOTE: avoid massive deps used by aws-config
# aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.122.0", default-features = false, features = [
  "behavior-version-latest",
  "rt-tokio",
  "http-1x",
  "rustls",
] }
bytes = "1.11"
figment = { version = "0.10", features = ["toml"] }
futures = "0.3"
futures-util = "0.3"
lazy_static = "1.4"
percent-encoding = "2.1"
prometheus = "0.14"
regex = "1"
reqwest = { version = "0.13", default-features = false, features = [
  "stream",
  "rustls-no-provider",
] }
rustls = { version = "0.23", default-features = false, features = [
  "std",
  "tls12",
  "ring",
] }
rstest = "0.26"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.2"

[dev-dependencies]
tempfile = "3"
httpmock = "0.8"
figment = { version = "0.10", features = ["test"] }
serial_test = "3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
